--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,4 +10,7 @@ repos:
     rev: v1.14.1
     hooks:
       - id: mypy
-        additional_dependencies: []
+        additional_dependencies:
+          - types-PyYAML
+          - types-requests
+          - pytest
