--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "beautifulsoup4>=4.14.3",
     "markdownify>=1.2.2",
     "pydantic>=2.12.5",
+    "requests>=2.32.5",
     "scrapy>=2.14.0",
 ]
 
@@ -16,6 +17,12 @@ dev = [
     "mypy>=1.19.1",
     "pre-commit>=4.5.1",
     "ruff>=0.14.11",
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "jiwer>=3.0.0",
+    "pyyaml>=6.0",
+    "types-pyyaml>=6.0",
+    "types-requests>=2.32.0",
 ]
 
 [tool.ruff]
@@ -30,3 +37,13 @@ ignore = []
 python_version = "3.12"
 strict = true
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
+addopts = "-v --tb=short"
+markers = [
+    "e2e: End-to-end tests",
+    "slow: Tests that take > 5 seconds",
+]
