Scrapy 기반 Python 문서 크롤러 구현
- CrawlSpider로 다중 페이지 크롤링 지원 (LinkExtractor + Rule)
- SphinxParser로 HTML → Markdown 변환 (코드 블록 보존)
- Pydantic 모델로 데이터 검증 (DocumentItem)
- JSONL 출력 파이프라인 구현
- E2E 통합 테스트 추가 (다중 페이지 수집 검증)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "scrapy>=2.14.0",
 ]
 
+[project.scripts]
+pydoc-crawler = "pydoc_crawler.cli:main"
+
 [dependency-groups]
 dev = [
     "mypy>=1.19.1",
